Fix line wraping sur la description Simplification du markup

--- a/app/Resources/views/editable/editable.less
+++ b/app/Resources/views/editable/editable.less
@@ -1,8 +1,3 @@
-pre {
-    font-family: inherit;
-    margin: 0;
-}
-
 .editable-empty {
     font-style: italic;
 }
@@ -26,10 +21,11 @@ pre {
     }
 }
 
-.field {
+.oneline-field {
     padding: .2em 0;
 }
 
 .description {
     margin: 1.4em 0;
+    white-space: pre-line; // https://developer.mozilla.org/fr/docs/Web/CSS/white-space
 }
